2005-06-22  Yves Combe  <yves@ycombe.net>

	* Completed migration of USE_PROFILS to USE_SQLITE.
	* Now profile system is always compiled in. 
	If SQLITE is not avalaible, profile system is just disabled.

2005-06-20  Yves Combe  <yves@ycombe.net>

	* add africa card in geography
	* fix atof bug in geography

2005-06-16  Yves Combe  <yves@ycombe.net>

	* Preparation of cairo integration (compilation errors)
	* --reread-xml option to force database boards rewrite.
	    Suppress boards if they are no more in the xml list.

2005-06-15  Yves Combe  <yves@ycombe.net>

	* Change billard to football (NTBF suggestion).

2005-06-14  Yves Combe  <yves@ycombe.net>

	* update INSTALL for libtool.
	* fix a segfault with gdate.

2005-06-14  Yves Combe  <yves@ycombe.net>

	* fix missing board_dir initialisation when board is read 
	from db.

2005-06-14  Yves Combe  <yves@ycombe.net>

	* fix compilation failure without --enable-profils

2005-06-14  Yves Combe  <yves@ycombe.net>

	* fix stupid mistake (board->board_dir and board->boarddir confusion).

2005-06-13  Yves Combe  <yves@ycombe.net>

	PROFILS
	* fix missing columns in db
	* fix NULL string db management.

2005-06-13  Yves Combe  <yves@ycombe.net>

	PROFILS
	* Read board from db at load ! 

2005-06-13  Yves Combe  <yves@ycombe.net>

	* src/gcompris/gameutil.c: suppress parsing xml for l10n. Use gettext.
	PROFILS:
	* Registering boards at first run seems ok.

2005-06-11  Yves Combe  <yves@ycombe.net>

	* Change section behaviour in xml board description
	* some profils works: registering boards almost correct.

2005-06-11  Yves Combe  <yves@ycombe.net>

        Profils stuff again.

2005-06-05  Yves Combe  <yves@ycombe.net>

	PROFILS
	* Database init integrity and VERSION check.

2005-06-03  Yves Combe  <yves@ycombe.net>

	PROFILS
	* add gcompris_db.h gcompris_db.c (interface with sqlite).
	* create table on database creation (gcompris_db_init).

2005-05-30  Yves Combe  <yves@ycombe.net>
