@@ -7,7 +7,9 @@ xml_in_files = \
 	board2_1.xml.in \
 	board3_0.xml.in \
 	board3_1.xml.in \
-	board4_0.xml.in
+	board4_0.xml.in \
+	board4_1.xml.in \
+	board5_0.xml.in
 
 xml_DATA = $(xml_in_files:.xml.in=.xml)
 
