@@ -1,5 +1,10 @@
 2005-06-22  Yves Combe  <yves@ycombe.net>
 
+	* fix broken Makefile.am
+	* untested gcompris_db_save_user fonction
+
+2005-06-22  Yves Combe  <yves@ycombe.net>
+
 	* Completed migration of USE_PROFILS to USE_SQLITE.
 	* Now profile system is always compiled in. 
 	If SQLITE is not avalaible, profile system is just disabled.
